# agent-bundle

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bundle.yaml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.github/: architecture.excalidraw  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: README.md
demo/code-formatter-e2b/: Dockerfile  README.md  main.ts  setup.sh
demo/code-formatter-k8s/: README.md  main.ts  setup.sh
demo/coding-assistant-ollama/: main.ts  setup.sh
demo/commands-codegen/: verify.ts  (+1 more)
docs/: CNAME  configuration.md  gtm-demo-strategy.md  gtm-launch-plan.md  index.html  infisical-setup.md  observability-plan.md  observability.md  plugin-marketplace-integration.md  proposal.md  sandbox-mcp-universal-transport.md  webui-ux-acceptance-report.md  webui-ux-improvements.md
examples/: bundle.yaml
plans/: implementation-plan.md  test-report.md
scripts/: __init__.py  check_directory_size.sh  check_python_quality.py  markdown_rich_text.py  markdown_table.py  notion_client.py  notion_doc_index.py  setup-worktree-hooks.sh  sync_content_hash.py  sync_docs_to_notion.py
site/: index.html
src/: runtime.ts
tests/: conftest.py  test_build.py  test_chat_api.py  test_config.py  test_mcp.py  test_sandbox.py  test_skills.py  test_sync_docs_to_notion.py
(+413 files in other folders)
